--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -10,7 +10,7 @@
             <th th:if="${session.user instanceof T(app.model.EnviromentalManager)}">Validez</th>
             <th>
                 <a th:if="${session.user instanceof T(app.model.EnviromentalManager)}" href="add"
-                   class="btn btn-success" role="button">Añadir municipio</a>
+                   class="btn btn-success" role="button">Añadir</a>
             </th>
         </tr>
         </thead>
