--- a/src/main/resources/templates/controlStaff/list.html
+++ b/src/main/resources/templates/controlStaff/list.html
@@ -13,7 +13,10 @@
             <th>Contraseña</th>
             <th>Horario</th>
             <th>Validez</th>
-            <th><a href="add" class="btn btn-success" role="button">Dar de alta</a></th>
+            <th>
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}" th:href="@{/control-staff/add/{id}(id=${data[0].areaPeriod.id})}" class="btn btn-success"
+                   role="button">Añadir</a>
+            </th>
         </tr>
         </thead>
         <tbody>
