th:if="${ object.active}"

--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -34,10 +34,10 @@
                     Horarios</a>
                 <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
                    th:href="@{/zone/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver zonas</a>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and (object.active) }"
                    th:href="@{/area/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and (object.active) }"
                    th:href="@{/area/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el área?')" class="btn btn-danger" role="button">Eliminar
                 </a>
