--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -31,13 +31,13 @@
             <td th:text="*{object.date}"></td>
             <td th:text="*{data[objectStat.index].areaPeriod.toPeriodString}"></td>
             <td>
-                <a th:if="${(session.user instanceof T(app.model.MunicipalManager)) or (session.user instanceof T(app.model.ControlStaff)) }"
+                <a th:if="${((session.user instanceof T(app.model.MunicipalManager)) or (session.user instanceof T(app.model.ControlStaff))) and object.active}"
                    th:href="@{/reservation/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a th:href="@{/reservation/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea cancelar la reserva?')"
                    class="btn btn-danger" role="button"
-                   th:if="*{object.active and session.user != null and not (session.user instanceof T(app.model.EnviromentalManager))}">Cancelar
+                   th:if="*{object.active and session.user != null and not (session.user instanceof T(app.model.EnviromentalManager)) and object.active }">Cancelar
                     la reserva</a>
             </td>
         </tr>
