--- a/src/main/resources/templates/zone/list.html
+++ b/src/main/resources/templates/zone/list.html
@@ -26,9 +26,9 @@
             <td th:text="*{object.capacity}"></td>
             <td th:text="*{object.toSignString}"></td>
             <td>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.active}"
                    th:href="@{/service/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and object.active}"
                    th:href="@{/zone/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea dar de baja la zona?')"
                    class="btn btn-danger" role="button" th:if="*{object.active}">Dar de baja</a></td>
