--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -20,7 +20,8 @@
         </thead>
         <tbody>
         <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="7">No hay ninguna área registrada</td>
+            <td colspan="7" th:if="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna área registrada</td>
+            <td colspan="5" th:unless="${session.user instanceof T(app.model.MunicipalManager)}">No hay ninguna área registrada</td>
         </tr>
         <tr th:each="object: ${object}">
             <td th:text="*{object.name}"></td>
@@ -28,7 +29,7 @@
             <td th:text="*{object.type.name}"></td>
             <td th:text="*{object.description}"></td>
             <td th:text="*{object.location}"></td>
-            <td><a th:href="*{object.image}" th:text="*{object.image}" target="_blank" th:if="${session.user instanceof T(app.model.MunicipalManager)}"></a></td>
+            <td th:if="${session.user instanceof T(app.model.MunicipalManager)}"><a th:href="*{object.image}" th:text="*{object.image}" target="_blank"></a></td>
             <td>
                 <a th:href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver
                     Horarios</a>
