--- a/src/main/resources/templates/areaPeriod/update.html
+++ b/src/main/resources/templates/areaPeriod/update.html
@@ -4,7 +4,7 @@
 <span layout:fragment="title"
       th:text="'Actualizar horario para ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'"></span>
 <main layout:fragment="content">
-    <form
+    <form onsubmit="return confirm('¿Seguro que desea actualizar el horario y los datos son correctos?')"
             th:object="${object}" method="post">
         <table>
             <tr>
@@ -45,7 +45,6 @@
             </tr>
         </table>
         <input type="submit"
-               onclick="return confirm('¿Seguro que desea actualizar el horario y los datos son correctos?')"
                value="Actualizar" class="btn btn-warning"/>Actualizar horario</td>
     </form>
 </main>
