--- a/src/main/resources/templates/citizen/update.html
+++ b/src/main/resources/templates/citizen/update.html
@@ -3,7 +3,7 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Actualizar datos del ciudadano o de la ciudadana</span>
 <main layout:fragment="content">
-    <form
+    <form onsubmit="return confirm('¿Seguro que quiere actualizar los datos y los datos son correctos?')"
             th:object="${object}" method="post">
         <table>
             <tr>
@@ -73,7 +73,7 @@
                 </td>
             </tr>
         </table>
-        <input onclick="return confirm('¿Seguro que quiere actualizar los datos y los datos son correctos?')"
+        <input
                type="submit" value="Actualizar" class="btn btn-warning"
         /></td>
     </form>
