--- a/src/main/resources/templates/service/update.html
+++ b/src/main/resources/templates/service/update.html
@@ -4,7 +4,7 @@
 <span layout:fragment="title"
       th:text="'Actualizar servicios de ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'"></span>
 <main layout:fragment="content">
-    <form
+    <form onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
             th:object="${object}" method="post">
         <td><input type="hidden" id="area" th:field="*{area}"></td>
         <table>
@@ -58,7 +58,6 @@
             </tr>
         </table>
         <input type="submit"
-               onclick="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
                value="Actualizar" class="btn btn-success"/>Actualizar servicio</td>
     </form>
 </main>
