--- a/src/main/resources/templates/municipalManager/update.html
+++ b/src/main/resources/templates/municipalManager/update.html
@@ -3,7 +3,7 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Actualizar un gestor municipal</span>
 <main layout:fragment="content">
-    <form
+    <form onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
             th:object="${object}" method="post">
         <table>
             <tr>
@@ -52,7 +52,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Actualizar" class="btn btn-warning"
-               onclick="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"/></td>
+        <input type="submit" value="Actualizar" class="btn btn-warning"/></td>
     </form>
 </main>
