--- a/src/main/resources/templates/area/add.html
+++ b/src/main/resources/templates/area/add.html
@@ -4,6 +4,7 @@
 <span layout:fragment="title" th:text="'Añadir area a ' + ${data[0].municipality.name}"></span>
 <main layout:fragment="content">
     <form
+            onsubmit="return confirm('¿Seguro que desea añadir el area y los datos son correctos?')"
             th:object="${object}" method="post">
         <table>
             <tr>
@@ -57,7 +58,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" onclick="return confirm('¿Seguro que desea añadir el area y los datos son correctos?')"
-               value="Añadir" class="btn btn-success"/>Añadir Área</td>
+        <input type="submit" value="Añadir" class="btn btn-success"/>Añadir Área</td>
     </form>
 </main>
