--- a/src/main/resources/templates/citizen/add.html
+++ b/src/main/resources/templates/citizen/add.html
@@ -4,6 +4,7 @@
 <span layout:fragment="title">Dar de alta ciudadano/ciudadana</span>
 <main layout:fragment="content">
     <form
+            onsubmit="return confirm('¿Seguro que quiere darse de alta y los datos son correctos?')"
             th:object="${object}" method="post">
         <table>
             <tr>
@@ -73,8 +74,7 @@
                 </td>
             </tr>
         </table>
-        <input onclick="return confirm('¿Seguro que quiere darse de alta y los datos son correctos?')"
-               type="submit" value="Dar de alta" class="btn btn-success"
+        <input type="submit" value="Dar de alta" class="btn btn-success"
         /></td>
     </form>
 </main>
