--- a/src/main/resources/templates/controlStaff/add.html
+++ b/src/main/resources/templates/controlStaff/add.html
@@ -4,6 +4,7 @@
 <span layout:fragment="title">Añadir personal de control</span>
 <main layout:fragment="content">
     <form
+            onsubmit="return confirm('¿Seguro que quiere darle de alta y los datos son correctos?')"
             th:object="${object}" method="post">
         <table>
             <tr>
@@ -43,8 +44,7 @@
                 </td>
             </tr>
         </table>
-        <input onclick="return confirm('¿Seguro que quiere darle de alta y los datos son correctos?')"
-               type="submit" value="Dar de alta" class="btn btn-success"
+        <input type="submit" value="Dar de alta" class="btn btn-success"
         /></td>
     </form>
 </main>
