--- a/src/main/resources/templates/municipalManager/add.html
+++ b/src/main/resources/templates/municipalManager/add.html
@@ -4,6 +4,7 @@
 <span layout:fragment="title">Añadir un gestor municipal</span>
 <main layout:fragment="content">
     <form
+            onsubmit="return confirm('¿Seguro que desea dar de alta al gestor municipal y los datos son correctos?')"
             th:object="${object}" method="post">
         <table>
             <tr>
@@ -52,8 +53,6 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" value="Dar de alta"
-               onclick="return confirm('¿Seguro que desea dar de alta al gestor municipal y los datos son correctos?')"
-               class="btn btn-success"/> Dar de alta gestor municipal</td>
+        <input type="submit" value="Dar de alta" class="btn btn-success"/> Dar de alta gestor municipal</td>
     </form>
 </main>
