--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -11,6 +11,7 @@
         <thead>
         <tr>
             <th>Código</th>
+            <th th:unless="${session.user instanceOf T(app.model.Citizen)}" >Ciudadano</th>
             <th>Número de personas</th>
             <th>Área</th>
             <th>Zonas</th>
@@ -21,10 +22,12 @@
         </thead>
         <tbody>
         <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="7">No hay ninguna reserva</td>
+            <td colspan="7" th:if="${session.user instanceOf T(app.model.Citizen)">No hay ninguna reserva</td>
+            <td colspan="8" th:unless="${session.user instanceOf T(app.model.Citizen)">No hay ninguna reserva</td>
         </tr>
         <tr th:each="object: ${object}">
             <td th:text="*{object.id}"></td>
+            <td th:unless="${session.user instanceOf T(app.model.Citizen)"  th:text="*{data[objectStat.index].citizen.toDisplayName}"></td>
             <td th:text="*{object.occupied}"></td>
             <td th:text="*{data[objectStat.index].area.name}"></td>
             <td th:text="*{data[objectStat.index].zone}"></td>
