--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -10,7 +10,7 @@
             <th>Fechas</th>
             <th>Horario</th>
             <th>
-                <a th:if="${session.user instanceof T(app.model.MunicipalManager)}" th:href="@{/area-period/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
+                <a th:if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == data[0].municipality.id}" th:href="@{/area-period/add/{id}(id=${data[0].area.id})}" class="btn btn-success"
                    role="button">Añadir</a>
             </th>
         </tr>
