--- a/src/main/resources/templates/reservation/update.html
+++ b/src/main/resources/templates/reservation/update.html
@@ -7,7 +7,7 @@
     <form th:object="${object}" method="post" onsubmit="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')">
         <img class="img-fluid" th:src="${data.area.image}">
         <table>
-            <tr  th:unless="${session.user instanceOf T(app.model.Citizen)">
+            <tr  th:unless="${session.user instanceOf T(app.model.Citizen)}">
                 <th>Ciudadano</th>
                 <td th:text="${data.citizen.toDisplayName}"></td>
             </tr>
