--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -40,7 +40,7 @@
                 <a th:href="@{/reservation/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea cancelar la reserva?')"
                    class="btn btn-danger" role="button"
-                   th:if="*{object.active and session.user != null and not (session.user instanceof T(app.model.EnviromentalManager)) and object.active }">Cancelar
+                   th:if="*{object.active and session.user != null and not (session.user instanceof T(app.model.EnviromentalManager))}">Cancelar
                     la reserva</a>
             </td>
         </tr>
